MET-6996 Fix various code smells